# GeniusOlympiad

./: .env  README.md  auth.py  backend.db  config.py  database.py  email_service.py  location_tracker.py  main.py  models.py  pyproject.toml  schemas.py
routes/: admin.py  location.py  user.py
static/: admin.css  auth.css  base.css  home.css  map.css  police.css  style.css  user.css
templates/: admin_panel.html  base.html  error.html  home.html  locations.html  login.html  map.html  police_panel.html  register.html  user.html  users.html
