[project]
name = "geniusolympiad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
    "sqlalchemy>=2.0.50",
]
